testsuite/tests/polykinds/T16247.stderr

T16247.hs:9:13: error:
    • These kind and type variables: a k (b :: k)
      are out of dependency order. Perhaps try this ordering:
        k (a :: k) (b :: k)
    • In a compiler-generated top-level kind signature for ‘Foo’:
        forall a k (b :: k). SameKind a b -> Type
